--- a/POS/POS.vbproj
+++ b/POS/POS.vbproj
@@ -70,6 +70,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Order.vb" />
+    <Compile Include="OrderSelectionPage.xaml.vb">
+      <DependentUpon>OrderSelectionPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="POSApp.vb" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -85,6 +88,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="OrderSelectionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Import Include="System.Threading.Tasks" />
