Employees can be modified, active status works

--- a/Management_Website/.project
+++ b/Management_Website/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Management_Website</name>
+	<name>Management_Website3</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -47,7 +47,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1648685743271</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
